# Pruebas_Calificadas

PC1/: 2024-II-pc1-p1.cpp  2024-II-pc1-p2.cpp  2024-II-pc1-p3.cpp  2025-I-pc1-p1.cpp  2025-I-pc1-p2.cpp  2025-I-pc1-p3.cpp  CMakeLists.txt  main.cpp  mogollon-sebastian-pc1-p1.cpp  mogollon-sebastian-pc1-p2.cpp  mogollon-sebastian-pc1-p3.cpp
PC2/: 2024-II-pc2-p2.cpp  2024-II-pc2-p3.cpp  2025-I-pc2-p1.cpp  2025-I-pc2-p2.cpp  2025-I-pc2-p3.cpp  CMakeLists.txt  mogollon-sebastian-pc2-p1.cpp  sparring1.cpp  sparring2.cpp  sparring3.cpp  sparring4.cpp  sparring5.cpp
PC2/2024-II/: 2024-II-pc2-p1.cpp  2024-II-pc2-p2.cpp  2024-II-pc2-p3.cpp  sparring1.cpp  sparring2.cpp
PE/: 2025-II-pe-p1.cpp  2025-II-pe-p2.cpp  2025-II-pe-p3.cpp
