cmake_minimum_required(VERSION 3.31)
project(PC1)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(2024-II-pc1-p1 2024-II-pc1-p1.cpp)
add_executable(2024-II-pc1-p2 2024-II-pc1-p2.cpp)
add_executable(2024-II-pc1-p3 2024-II-pc1-p3.cpp)

add_executable(2025-I-pc1-p1 2025-I-pc1-p1.cpp)
add_executable(2025-I-pc1-p2 2025-I-pc1-p2.cpp)
add_executable(2025-I-pc1-p3 2025-I-pc1-p3.cpp)

add_executable(mogollon-sebastian-pc1-p1 mogollon-sebastian-pc1-p1.cpp)
add_executable(mogollon-sebastian-pc1-p2 mogollon-sebastian-pc1-p2.cpp)
add_executable(mogollon-sebastian-pc1-p3 mogollon-sebastian-pc1-p3.cpp)
