cmake_minimum_required(VERSION 3.31)
project(PC2)

set(CMAKE_CXX_STANDARD 20)

add_executable(PC2 main.cpp)
add_executable(2024-II-pc2-p1 2024-II-pc2-p1.cpp)
add_executable(2024-II-pc2-p2 2024-II-pc2-p2.cpp)
add_executable(2024-II-pc2-p3 2024-II-pc2-p3.cpp)

add_executable(2025-I-pc2-p1 2025-I-pc2-p1.cpp)
add_executable(2025-I-pc2-p2 2025-I-pc2-p2.cpp)
add_executable(2025-I-pc2-p3 2025-I-pc2-p3.cpp)

add_executable(sparring1 sparring1.cpp)
add_executable(sparring2 sparring2.cpp)
add_executable(sparring3 sparring3.cpp)
add_executable(sparring4 sparring4.cpp)
add_executable(sparring5 sparring5.cpp)


